@@ -1,6 +1,4 @@
 TODO
-- Add context menu for deletion of folders
-- Add context menu for "mark as watched"?
 
 DONE
 - See changelog.txt
