@@ -103,8 +103,14 @@ if mode[0] == "folder":
 	# Then iterate through all the files in order to populate the GUI
 	for oneItem in folderContents["metadata"]["contents"]:
 		if oneItem["isfolder"] == True:
-			url = base_url + "?mode=folder&folderID=" + `oneItem["folderid"]`
 			li = xbmcgui.ListItem(oneItem["name"], iconImage='DefaultFolder.png')
+			# Add context menu item for "delete folder"
+			deleteActionMenuText = myAddon.getLocalizedString(30114) # "Delete from PCloud..."
+			deleteActionUrl = base_url + "?mode=delete&folderID=" + `oneItem["folderid"]` + "&filename=" + urllib.quote(oneItem["name"])
+			li.addContextMenuItems(
+				[(deleteActionMenuText, "RunPlugin(" + deleteActionUrl + ")")])
+			# Finally add the list item to the directory
+			url = base_url + "?mode=folder&folderID=" + `oneItem["folderid"]`
 			xbmcplugin.addDirectoryItem(handle=addon_handle, url=url,
 									listitem=li, isFolder=True)
 		else:
@@ -128,12 +134,16 @@ if mode[0] == "folder":
 				{ 	"codec", oneItem["audiocodec"] }
 			)
 			# The below is necessary in order for xbmcplugin.setResolvedUrl() to work properly
-			li.setProperty('IsPlayable', 'true')
-			# Add context menu item for delete
+			li.setProperty("IsPlayable", "true")
+			# Add context menu item for delete file
 			deleteActionMenuText = myAddon.getLocalizedString(30114) # "Delete from PCloud..."
 			deleteActionUrl = base_url + "?mode=delete&fileID=" + `oneItem["fileid"]` + "&filename=" + urllib.quote(oneItem["name"])
+			# Add context menu item for mark as watched
+			markAsWatchedMenuText = myAddon.getLocalizedString(30121) # "Mark as watched"
 			li.addContextMenuItems(
-				[(deleteActionMenuText, "RunPlugin(" + deleteActionUrl + ")")])
+				[(deleteActionMenuText, "RunPlugin(" + deleteActionUrl + ")"),
+				(markAsWatchedMenuText, "Action(ToggleWatched)")]
+				)
 			# Finally add the list item to the directory
 			fileUrl = base_url + "?mode=file&fileID=" + `oneItem["fileid"]`
 			xbmcplugin.addDirectoryItem(handle=addon_handle, url=fileUrl, listitem=li)
@@ -168,21 +178,40 @@ elif mode[0] == "delete":
 		authResult = AuthenticateToPCloud()
 		if authResult == False:
 			exit()
-	fileID = int(args["fileID"][0])
+	idToDelete = args.get("fileID", None)
+	if idToDelete is None:
+		idToDelete = int(args["folderID"][0])
+		deleteFolder = True
+	else:
+		idToDelete = int(idToDelete[0])
+		deleteFolder = False
 	filename = urllib.unquote(args["filename"][0])
-	filenameShort = filename[:30] # first 30 char
+	filenameShort = filename[:35] # first 35 char
 	if filenameShort != filename:
 		filenameShort += "..." 
 	yesNoDialog = xbmcgui.Dialog()
 	wantToDelete = yesNoDialog.yesno(
-					myAddon.getLocalizedString(30115), 						# "Confirm File Delete"
-					myAddon.getLocalizedString(30116).format(filenameShort),# "Delete file '{0}' from PCloud?"
+					myAddon.getLocalizedString(30115), 						# "Confirm Delete"
+					myAddon.getLocalizedString(30116).format(filenameShort),# "Delete '{0}' from PCloud?"
 					myAddon.getLocalizedString(30117))						# "Operation cannot be undone."
 	if not wantToDelete:
 		exit()
-	pcloud.DeleteFile(fileID)
+	try:
+		if deleteFolder:
+			pcloud.DeleteFolder(idToDelete)
+		else:
+			pcloud.DeleteFile(idToDelete)
+	except Exception as ex:
+		xbmcgui.Dialog().notification(
+			myAddon.getLocalizedString(30107), # "Error"
+			myAddon.getLocalizedString(30119), # "Error during delete (see log)"
+			icon=xbmcgui.NOTIFICATION_ERROR,
+			time=5000)
+		xbmc.log(myAddon.getLocalizedString(30120) + ": " + `ex`, xbmc.LOGERROR) # "ERROR: cannot delete file or folder from PCloud"
+		exit()
 	xbmc.executebuiltin("Container.Refresh()")
 	xbmcgui.Dialog().notification(
 		myAddon.getLocalizedString(30110), # "Success"
-		myAddon.getLocalizedString(30118), # "File deleted successfully"
+		myAddon.getLocalizedString(30118), # "Deleted successfully"
 		time=5000)
+
