@@ -16,7 +16,10 @@
   <string id="30113">Torna al folder di livello superiore</string>
   <string id="30114">Cancella da PCloud...</string>
   <string id="30115">Confermare Cancellazione</string>
-  <string id="30116">Cancellare file '{0}' da PCloud?</string>
+  <string id="30116">Cancellare '{0}' da PCloud?</string>
   <string id="30117">L'operazione è irreversibile.</string>
-  <string id="30118">File cancellato con successo</string>
+  <string id="30118">Cancellazione eseguita con successo</string>
+  <string id="30119">Cancellazione fallita (vedi log)</string>
+  <string id="30120">ERRORE: cancellazione file/folder da PCloud fallita</string>
+  <string id="30121">Segna come già visto</string>
 </strings>
